--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                 socket.emit('send message', $message.val());
                 $message.val('');
             });
+
+            //add mensagens no chat
+            socket.on('new message', function (data){
+                $chat.append('<div class="well">'+data.msg+'</div>');
+            });
         });
     </script>
     
