--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chat Sistemas Distribuidos</title>
+    <title>WhatsLike</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Lariel/chatrmi/Dev/src/img/WhatsLike.png" />
@@ -25,7 +25,7 @@
 <body>
     <div class="container"> 
 
-        <div id="userFormArea" class="row"> <!-- form de login -->
+        <div id="userFormArea" class="row"> <!-- form de log in -->
                 <div class="col-md-12">  <!-- bootstrap -->
                     <form id="userForm">
                             <div class="form-group">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="well">
                     <h3>Meus grupos</h3>
-                    <ul class="list-group" id="users"></ul>
+                    <ul class="list-group" id="grupos"></ul>
                 </div>
             </div>
 
@@ -84,6 +84,7 @@
             var $userForm = $('#userForm');
             var $users = $('#users');
             var $username = $('#username');
+
             //envia mensagem
             $messageForm.submit(function(e){
                 e.preventDefault();
@@ -96,7 +97,7 @@
                 $chat.append('<div class="well"><strong>'+data.user+'</strong>: '+data.msg+'</div>');
             });
             
-            //login
+            //Log In
             $userForm.submit(function(e){
                 e.preventDefault();
                 socket.emit('new user', $username.val(),function(data){
