add app.use para js e css; corrigido login com email e senha; feito logout;

--- a/index.html
+++ b/index.html
@@ -5,129 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+
     <title>WhatsLike</title>
 
 
-    <link rel="stylesheet" href="/css/application.css" type="text/html" media="screen" charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600,700">
 
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Lariel/chatrmi/Dev/src/img/WhatsLike.png" />
 
-    <script src="js/application.js" type="text/html" charset="UTF-8"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="/js/app.js" type="text/javascript" charset="UTF-8"></script>
     <script src="/socket.io/socket.io.js"></script>
-
-    <style>
-        /*tentar incluir este trecho no styles.css */
-        body {
-            margin-top: 30px;
-        }
-
-        #userLoginArea {
-            display: none;
-        }
-
-        #conversa {
-            display: none;
-        }
-
-        input,
-        button {
-            font-family: 'Nunito', sans-serif;
-            font-weight: 700;
-        }
-
-        .main-div,
-        .loggedin-div {
-            min-width: 70%;
-            margin: 0px auto;
-            margin-top: 50px;
-            padding: 20px;
-            display: none;
-        }
-
-        .main-div input {
-            display: block;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background: #fff;
-            padding: 15px;
-            outline: none;
-            width: 100%;
-            margin-bottom: 20px;
-            transition: 0.3s;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-        }
-
-        .main-div input:focus {
-            border: 1px solid #777;
-        }
-
-        .main-div button,
-        .loggedin-div button {
-            background: #5d8ffc;
-            color: #fff;
-            border: 1px solid #5d8ffc;
-            border-radius: 5px;
-            padding: 15px;
-            display: block;
-            width: 100%;
-            transition: 0.3s;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-        }
-
-        .main-div button:hover,
-        .loggedin-div button:hover {
-            background: #fff;
-            color: #5d8ffc;
-            border: 1px solid #5d8ffc;
-            cursor: pointer;
-        }
-
-        /*tentar incluir este trecho no styles.css */
-    </style>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
 
 </head>
 
-
-<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-<script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyDiXcyzs2EeXLfAsCbWkxhalxqrT-IXxG0",
-        authDomain: "chat-socket-io.firebaseapp.com",
-        databaseURL: "https://chat-socket-io.firebaseio.com",
-        projectId: "chat-socket-io",
-        storageBucket: "chat-socket-io.appspot.com",
-        messagingSenderId: "391959127375"
-    };
-    firebase.initializeApp(config);
-</script>
-
-
 <body>
     <div class="container">
-        
-        <!-- Auth Firebase -->
+
+        <!-- Auth Google -->
         <div id="login_div" class="main-div">
-            <h3>WhatsLike Login</h3>
+            <label>Informe seu e-mail</label>
             <input type="email" placeholder="e-mail" id="email_field" />
+            <label>Informe sua senha</label>
             <input type="password" placeholder="senha" id="password_field" />
+
             <button onclick="login()">Login</button>
         </div>
+        <!-- Auth Google -->
 
-        <div id="user_div" class="loggedin-div">
-            <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
-            <button onclick="logout()">Logout</button>
-        </div>
-        <!-- / Auth Firebase -->
-
+        <!-- form de log in simples-->
         <div id="userLoginArea" class="row">
-            <!-- form de log in -->
             <div class="col-md-12">
                 <!-- bootstrap -->
                 <form id="userLoginForm">
@@ -143,7 +52,6 @@
                 </form>
             </div>
         </div>
-
 
         <div id="conversa" class="row">
             <!-- tela de conversa -->
@@ -173,8 +81,10 @@
                         <textarea class="form-control" id="message"></textarea>
                         <br />
                         <input type="submit" class="btn btn-primary" value="Enviar Mensagem" />
+                        <br />
                     </div>
                 </form>
+                <button class="btn btn-primary main-div" onclick="logout()">Logout</button>
             </div>
         </div>
     </div>
@@ -224,58 +134,18 @@
 
         });
 
-
-        //tentar incluir este trecho de código no app.js
-
-        firebase.auth().onAuthStateChanged(function (user) {
-            if (user) {
-
-                // User is signed in.
-
-                document.getElementById("user_div").style.display = "block";
-                document.getElementById("login_div").style.display = "none";
-
-                var user = firebase.auth().currentUser;
-
-                if (user != null) {
-
-                    var email_id = user.email;
-                    document.getElementById("user_para").innerHTML = "Welcome User : " + email_id;
-
-                }
-
-            } else {
-                // No user is signed in.
-                document.getElementById("user_div").style.display = "none";
-                document.getElementById("login_div").style.display = "block";
-            }
-        });
-
-        function login() {
-            var userEmail = document.getElementById("email_field").value;
-            var userPass = document.getElementById("password_field").value;
-
-            firebase.auth().signInWithEmailAndPassword(userEmail, userPass).catch(function (error) {
-
-                // Handle Errors here.
-                var errorCode = error.code;
-                var errorMessage = error.message;
-
-                window.alert("Error : " + errorMessage);
-
-            });
-
-        }
-
-        function logout() {
-            firebase.auth().signOut();
-        }
-
-
-        //tentar inclir este trecho de código no app.js
-
-
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyDiXcyzs2EeXLfAsCbWkxhalxqrT-IXxG0",
+            authDomain: "chat-socket-io.firebaseapp.com",
+            databaseURL: "https://chat-socket-io.firebaseio.com",
+            projectId: "chat-socket-io",
+            storageBucket: "chat-socket-io.appspot.com",
+            messagingSenderId: "391959127375"
+        };
+        firebase.initializeApp(config);
     </script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
