--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Chat</title>
+    <title>WhatsLike</title>
 
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Lariel/chatrmi/Dev/src/img/WhatsLike.png" />
 
@@ -50,14 +50,6 @@
                 <div class="well">
                     <h3>Usuários online</h3>
                     <ul class="list-group" id="users"></ul>
-                </div>
-                <div class="well">
-                    <h3>Meus contatos</h3>
-                    <ul class="list-group" id="users"></ul>
-                </div>
-                <div class="well">
-                    <h3>Meus grupos</h3>
-                    <ul class="list-group" id="grupos"></ul>
                 </div>
             </div>
 
